// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Others/BranchInfoRow With Info 1`] = `
<table
  width={400}
>
  <tbody>
    <tr>
      <td>
        <a
          href="https://github.com/lowsky/dashboard/tree/branch-x"
          rel="noopener noreferrer nofollow"
        >
          branch-x
        </a>
         
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-github fa-w-16 "
          data-icon="github"
          data-prefix="fab"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 496 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </td>
      <td>
        <a
          href="https://github.com/lowsky/dashboard/pull/42"
          rel="noopener noreferrer nofollow"
          title="add PR info to branch table"
        >
          #
          42
        </a>
      </td>
      <td>
        <div>
          <a
            href="https://github.com/lowsky/dashboard/tree/bfae86ac1dc8d3b0ae594e2c3a23311dd503d15e"
            rel="noopener noreferrer nofollow"
          >
            <strong>
              dummy-data! Merge pull request #1234 from lowsky/a-new-feature
            </strong>
          </a>
        </div>
        <div>
          <i>
            2017-03-14T18:59:30Z
          </i>
           by 
          <a
            href="https://github.com/lowsky"
            rel="noopener noreferrer nofollow"
          >
            <img
              alt="avatar"
              className="commit_avatar"
              src="https://avatars2.githubusercontent.com/u/217931?v=3"
              width={32}
            />
             
            <span>
              lowsky
            </span>
          </a>
           
        </div>
        <div
          className="statusline"
        >
          <a
            href="https://www.github.com/lowsky/dashboard"
            style={
              Object {
                "color": "green",
              }
            }
            title="only some demo dummy demo data"
          >
            <span>
              only some demo
            </span>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-check-circle fa-w-16 "
              data-icon="check-circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={
                Object {
                  "verticalAlign": "top",
                }
              }
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
             
          </a>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Others/BranchesTable With One Branch 1`] = `
<table
  className="table is-bordered is-striped is-hoverable"
>
  <thead>
    <tr>
      <th>
        <span
          className="fas fa-code-branch"
        />
        <span>
          Branch
        </span>
      </th>
      <th>
        PR
      </th>
      <th>
        Commit
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <a
          href="https://github.com/lowsky/dashboard/tree/branch-x"
          rel="noopener noreferrer nofollow"
        >
          branch-x
        </a>
         
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-github fa-w-16 "
          data-icon="github"
          data-prefix="fab"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 496 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </td>
      <td>
        <a
          href="https://github.com/lowsky/dashboard/pull/42"
          rel="noopener noreferrer nofollow"
          title="add PR info to branch table"
        >
          #
          42
        </a>
      </td>
      <td>
        <div>
          <a
            href="https://github.com/lowsky/dashboard/tree/bfae86ac1dc8d3b0ae594e2c3a23311dd503d15e"
            rel="noopener noreferrer nofollow"
          >
            <strong>
              dummy-data! Merge pull request #1234 from lowsky/a-new-feature
            </strong>
          </a>
        </div>
        <div>
          <i>
            2017-03-14T18:59:30Z
          </i>
           by 
          <a
            href="https://github.com/lowsky"
            rel="noopener noreferrer nofollow"
          >
            <img
              alt="avatar"
              className="commit_avatar"
              src="https://avatars2.githubusercontent.com/u/217931?v=3"
              width={32}
            />
             
            <span>
              lowsky
            </span>
          </a>
           
        </div>
        <div
          className="statusline"
        >
          <a
            href="https://www.github.com/lowsky/dashboard"
            style={
              Object {
                "color": "green",
              }
            }
            title="only some demo dummy demo data"
          >
            <span>
              only some demo
            </span>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-check-circle fa-w-16 "
              data-icon="check-circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={
                Object {
                  "verticalAlign": "top",
                }
              }
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
             
          </a>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Others/CommitStatus With Data 1`] = `
Array [
  <div>
    <a
      href="https://github.com/lowsky/dashboard/tree/bfae86ac1dc8d3b0ae594e2c3a23311dd503d15e"
      rel="noopener noreferrer nofollow"
    >
      <strong>
        dummy-data! Merge pull request #1234 from lowsky/a-new-feature
      </strong>
    </a>
  </div>,
  <div>
    <i>
      2017-03-14T18:59:30Z
    </i>
     by 
    <a
      href="https://github.com/lowsky"
      rel="noopener noreferrer nofollow"
    >
      <img
        alt="avatar"
        className="commit_avatar"
        src="https://avatars2.githubusercontent.com/u/217931?v=3"
        width={32}
      />
       
      <span>
        lowsky
      </span>
    </a>
     
  </div>,
  <div
    className="statusline"
  >
    <a
      href="https://www.github.com/lowsky/dashboard"
      style={
        Object {
          "color": "green",
        }
      }
      title="only some demo dummy demo data"
    >
      <span>
        only some demo
      </span>
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check-circle fa-w-16 "
        data-icon="check-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={
          Object {
            "verticalAlign": "top",
          }
        }
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
       
    </a>
  </div>,
]
`;

exports[`Storyshots Others/CommitStatus With No Data 1`] = `
Array [
  <div>
    <a
      href="https://github.com/lowsky/dashboard/tree/undefined"
      rel="noopener noreferrer nofollow"
    >
      <strong>
        -?-
      </strong>
    </a>
  </div>,
  <div>
    <i>
      -?-
    </i>
  </div>,
  <div
    className="statusline"
  />,
]
`;

exports[`Storyshots Others/NavBar Default 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
>
  <div
    className="navbar-brand"
  >
    <span
      className="navbar-item"
    >
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Dashboard
      </a>
    </span>
    <span
      className="navbar-item"
    >
      <a
        href="/relay/lowsky/dashboard"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        GraphQL+Relay Demo
      </a>
    </span>
    <span
      className="navbar-item"
    >
      <a
        href="/story-book/index.html"
      >
        Storybook
      </a>
    </span>
    <span
      className="navbar-item"
    >
      <a
        href="https://github.com/lowsky/dashboard/"
        rel="noopener noreferrer nofollow"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-github fa-w-16 fa-1x "
          data-icon="github"
          data-prefix="fab"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 496 512"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </a>
    </span>
    <a
      aria-expanded="false"
      aria-label="menu"
      className="navbar-burger "
      onClick={[Function]}
      role="button"
    >
      <span
        aria-hidden="true"
      />
      <span
        aria-hidden="true"
      />
      <span
        aria-hidden="true"
      />
    </a>
  </div>
  <div
    aria-expanded="false"
    aria-label="menu"
    className="navbar-menu "
    id="navMenu"
  >
    <div
      className="navbar-start"
    >
      <span
        className="navbar-item"
      >
        <a
          href="/restful/lowsky/dashboard"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          RESTful Demo
        </a>
      </span>
      <span
        className="navbar-item"
      >
        <a
          href="https://github.com/lowsky/dashboard/"
          rel="noopener noreferrer nofollow"
        >
          <span>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-github fa-w-16 "
              data-icon="github"
              data-prefix="fab"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 496 512"
              width="1rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
             Github Repo
          </span>
        </a>
      </span>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Others/Pages Main 1`] = `
<div
  style={
    Object {
      "padding": "3em",
    }
  }
>
  <div
    className="title"
  >
    <h1>
      What is it?
    </h1>
  </div>
  <div
    className="content"
  >
    <p>
      The goal of this demo was to compare a 
      <strong>
        Relay based GraphQL
      </strong>
       and
       
      <strong>
        regular Rest
      </strong>
       approach for fetching data in a web client.
    </p>
    <p>
      Additionally, is contains a solution for mixing 
      <strong>
        Relay
      </strong>
       and 
      <strong>
        normal React
      </strong>
       
      components.
    </p>
  </div>
  <div
    className="content"
  >
    <p>
      You can use the links above in the nav bar for different views:
    </p>
    <ul>
      <li>
        <strong>
          Storybook
        </strong>
         shows all components.
      </li>
      <li>
        <strong>
          GraphQL + Relay
        </strong>
         - fetches all information from a locally installed relay server.
         
        <strong>
          Note:
        </strong>
        <i>
          This needs a backend server / currently implemented as lambda function...
        </i>
      </li>
      <li>
        <strong>
          RESTFul Demo
        </strong>
         - just fetches info from Github's public open API via Rest calls.
      </li>
    </ul>
    <h4
      className="is-size-4"
    >
      Examples
    </h4>
    <ul>
      <li>
        <strong>
          lowsky/dashboard:
        </strong>
        <a
          href="./restful/lowsky/dashboard"
        >
          <strong>
            Rest
          </strong>
        </a>
        or
        <a
          href="./relay/lowsky/dashboard"
        >
          <strong>
            GraphQL Relay
          </strong>
        </a>
        based, or
        <a
          href="./side-by-side/lowsky/dashboard"
        >
          <strong>
            side-by-side
          </strong>
        </a>
      </li>
      <li>
        <strong>
          lowsky/spotify-graphql-server:
        </strong>
        <a
          href="./restful/lowsky/spotify-graphql-server"
        >
          <strong>
            Rest
          </strong>
        </a>
        or
        <a
          href="./relay/lowsky/spotify-graphql-server"
        >
          <strong>
            GraphQL Relay
          </strong>
        </a>
        based, or
        <a
          href="./side-by-side/lowsky/spotify-graphql-server"
        >
          <strong>
            side-by-side
          </strong>
        </a>
      </li>
    </ul>
    <h4
      className="is-size-4"
    >
      How to start the local server
    </h4>
    <p>
      After installing the dependencies via 
      <code>
        npm install
      </code>
       you also need to configure GitHub authentication token in the 
      <code>
        server/.env
      </code>
       file, then simply run the local graphql server via and web app via
      <code>
        yarn run dev
      </code>
    </p>
  </div>
</div>
`;

exports[`Storyshots Others/PullRequestInfo Default 1`] = `
<a
  href="https://github.com/lowsky/dashboard/pull/42"
  rel="noopener noreferrer nofollow"
  title="add PR info to branch table"
>
  #
  42
</a>
`;

exports[`Storyshots Others/Repo Fake Data 1`] = `
<div
  className="column"
>
  <h1
    className="title is-3"
  >
    <span
      className="has-text-grey-light"
    >
      Repository
    </span>
  </h1>
  <h3
    className="subTitle is-3"
  >
    <a
      href="https://github.com/login/demo-repo"
      rel="noopener noreferrer nofollow"
    >
      <strong>
        login
         / 
        demo-repo
      </strong>
      <span
        className="icon"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-github fa-w-16 "
          data-icon="github"
          data-prefix="fab"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 496 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </a>
  </h3>
</div>
`;

exports[`Storyshots Others/Spinner Default 1`] = `
<span
  className="icon is-large"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-spinner fa-w-16 fa-3x "
    data-icon="spinner"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</span>
`;

exports[`Storyshots Others/User With Avatar 1`] = `
<div
  className="card"
>
  <div
    className="card-content"
  >
    <div
      className="media"
    >
      <div
        className="media-left"
      >
        <figure
          className="image is-48x48"
        >
          <img
            alt="avatar"
            src="https://avatars2.githubusercontent.com/u/217931?v=3"
          />
        </figure>
      </div>
      <div
        className="media-content"
      >
        <p
          className="title is-4"
        >
          login
        </p>
        <p
          className="subtitle is-6"
        >
          company
        </p>
      </div>
    </div>
    <div
      className="content"
    >
      Owner
    </div>
  </div>
</div>
`;

exports[`Storyshots Others/User Without Avatar 1`] = `
<div
  className="card"
>
  <div
    className="card-content"
  >
    <div
      className="media"
    >
      <div
        className="media-left"
      >
        <figure
          className="image is-48x48"
        >
          <img
            alt="avatar"
            src="/octicon-git-branch.svg"
          />
        </figure>
      </div>
      <div
        className="media-content"
      >
        <p
          className="title is-4"
        >
          login
        </p>
        <p
          className="subtitle is-6"
        >
          company
        </p>
      </div>
    </div>
    <div
      className="content"
    >
      Owner
    </div>
  </div>
</div>
`;

exports[`Storyshots Others/UserRepo With User And Repo 1`] = `
Array [
  <div
    className="column"
  >
    <h1
      className="title is-3"
    >
      <span
        className="has-text-grey-light"
      >
        Repository
      </span>
    </h1>
    <h3
      className="subTitle is-3"
    >
      <a
        href="https://github.com/login/demo-repo"
        rel="noopener noreferrer nofollow"
      >
        <strong>
          login
           / 
          demo-repo
        </strong>
        <span
          className="icon"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-github fa-w-16 "
            data-icon="github"
            data-prefix="fab"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 496 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </a>
    </h3>
  </div>,
  <div
    className="column"
  >
    <div
      className="card"
    >
      <div
        className="card-content"
      >
        <div
          className="media"
        >
          <div
            className="media-left"
          >
            <figure
              className="image is-48x48"
            >
              <img
                alt="avatar"
                src="https://avatars2.githubusercontent.com/u/217931?v=3"
              />
            </figure>
          </div>
          <div
            className="media-content"
          >
            <p
              className="title is-4"
            >
              login
            </p>
            <p
              className="subtitle is-6"
            >
              company
            </p>
          </div>
        </div>
        <div
          className="content"
        >
          Owner
        </div>
      </div>
    </div>
    <table
      className="table is-bordered is-striped is-hoverable"
    >
      <thead>
        <tr>
          <th>
            <span
              className="fas fa-code-branch"
            />
            <span>
              Branch
            </span>
          </th>
          <th>
            PR
          </th>
          <th>
            Commit
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <a
              href="https://github.com/lowsky/dashboard/tree/branch-x"
              rel="noopener noreferrer nofollow"
            >
              branch-x
            </a>
             
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-github fa-w-16 "
              data-icon="github"
              data-prefix="fab"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 496 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </td>
          <td>
            <a
              href="https://github.com/lowsky/dashboard/pull/42"
              rel="noopener noreferrer nofollow"
              title="add PR info to branch table"
            >
              #
              42
            </a>
          </td>
          <td>
            <div>
              <a
                href="https://github.com/lowsky/dashboard/tree/bfae86ac1dc8d3b0ae594e2c3a23311dd503d15e"
                rel="noopener noreferrer nofollow"
              >
                <strong>
                  dummy-data! Merge pull request #1234 from lowsky/a-new-feature
                </strong>
              </a>
            </div>
            <div>
              <i>
                2017-03-14T18:59:30Z
              </i>
               by 
              <a
                href="https://github.com/lowsky"
                rel="noopener noreferrer nofollow"
              >
                <img
                  alt="avatar"
                  className="commit_avatar"
                  src="https://avatars2.githubusercontent.com/u/217931?v=3"
                  width={32}
                />
                 
                <span>
                  lowsky
                </span>
              </a>
               
            </div>
            <div
              className="statusline"
            >
              <a
                href="https://www.github.com/lowsky/dashboard"
                style={
                  Object {
                    "color": "green",
                  }
                }
                title="only some demo dummy demo data"
              >
                <span>
                  only some demo
                </span>
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-check-circle fa-w-16 "
                  data-icon="check-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "top",
                    }
                  }
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
                 
              </a>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
]
`;
